@@ -81,8 +81,16 @@ classes:
   - 'freeradius::v3::modules::ldap'
 ```
 
-The default setting for radiusd.conf can be found in freeradius::v3::conf
+The default settings for radiusd.conf can be found in
+- freeradius::v3::conf
+- freeradius::v3::conf::log
+- freeradius::v3::conf::security
+- freeradius::v3::conf::thread_pool
 and can be changed using hiera.
+
+The listener is setup in the freeradius::v3::sites::ldap.  Review that module if
+there is a need to change the listener or to use a global listener instead of one linked
+to a site.
 
 #### Add radius clients:
 
@@ -90,7 +98,7 @@ Client configurations will need to be created to allow clients to talk to the se
 See the default client.conf file installed by freeradius for information on how to
 configure clients.
 
-This module lets clients be created individually with freeradius::v3::conf::client.
+The freeradius::v3::conf::client module lets clients be created individually.
 Alternatively, a complete clients.conf file can be copied in by specifying the file
 source in hiera with the variable freeradius::v3::conf::clients_conf_source.
 
@@ -120,11 +128,14 @@ or to copy over a file with clients defined, set the hiera variable:
 freeradius::v3::conf::clients_conf_source: puppet:///modules/myconfigmod/freeradius/client.conf
 ```
 
+
 ### Other configuration
+
+The following configurations are not needed for the LDAP configuration.  It a few
+examples of further configuration or alternate configuration that can be done.
 
 #### Add local radius users and trigger.
 
-Note: You do not need to add any local users or set up SNMP triggers to get LDAP to work.
 
 Users can be created by setting a source file containing the required users
 as follows:
@@ -192,7 +203,7 @@ Currently this has only been tested with Centos 7 and freeradius v3.
 
 ## Development
 
-Please read our [Contribution Guide](http://simp.readthedocs.io/en/stable/contributors_guide/index.html).
+Please read our [Contribution Guide](https://simp.readthedocs.io/en/stable/contributors_guide/index.html).
 
 ### Acceptance tests
 
