@@ -17,7 +17,7 @@
 #
 # @author https://github.com/simp/pupmod-simp-freeradius/graphs/contributors
 #
-class freeradius::v3::radiusd_conf::log (
+class freeradius::v3::conf::log (
   Freeradius::Logdest        $destination     = 'syslog',
   Stdlib::AbsolutePath       $log_file        = "${::freeradius::logdir}/radius.log",
   Simplib::Syslog::Facility  $syslog_facility = 'local6',
