@@ -19,7 +19,7 @@
 # @param chroot_group
 #    Group to run daemon as.
 #
-class freeradius::v3::radiusd_conf::security (
+class freeradius::v3::conf::security (
   Integer                        $max_attributes    = 200,
   Integer[1,5]                   $reject_delay      = 1,
   Boolean                        $status_server     = true,
